force-app/main/default/objects/BrillioFC__Package_Details__c/BrillioFC__Package_Details__c.object-meta.xml
<CustomObject>
    <description>This object will hold information about Managed packages.</description>
    <label>ForceClinic Package Details</label>
    <nameField>
        <label>Package Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ForceClinic Package Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>