force-app/main/default/objects/BrillioFC__Package_Details__c/fields/BrillioFC__Allowed_Licenses__c.field-meta.xml
<CustomField>
    <fullName>BrillioFC__Allowed_Licenses__c</fullName>
    <inlineHelpText>Packages which have free licenses shows value as -1.</inlineHelpText>
    <label>Allowed Licenses</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>