force-app/main/default/objects/BrillioFC__Package_Details__c/fields/BrillioFC__Namespace__c.field-meta.xml
<CustomField>
    <fullName>BrillioFC__Namespace__c</fullName>
    <label>Namespace</label>
    <length>255</length>
    <type>Text</type>
</CustomField>