force-app/main/default/objects/BrillioFC__Package_Details__c/fields/BrillioFC__Package_Id__c.field-meta.xml
<CustomField>
    <fullName>BrillioFC__Package_Id__c</fullName>
    <label>Package Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>