force-app/main/default/objects/BrillioFC__Package_Details__c/fields/BrillioFC__UsedLicenses__c.field-meta.xml
<CustomField>
    <fullName>BrillioFC__UsedLicenses__c</fullName>
    <label>UsedLicenses</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>